@@ -7,6 +7,8 @@
 
 ** Added
 
++ =git-clone-my= command for cloning personal repositories
+
 *** Emacs
 
 **** Org
